--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'realm-android'
 
 android {
     def config = rootProject.extensions.getByName("ext")
@@ -121,4 +122,8 @@ kotlin {
     experimental {
         coroutines "enable"
     }
+}
+
+realm {
+    syncEnabled = true;
 }
