--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.kotlin_version = '1.2.50'
     ext.gradle_tools = '3.1.3'
     ext.build_tools = '27.0.3'
+    ext.v_realm = '5.4.1'
 
     ext.compile_sdk = 27
     ext.target_sdk = 27
@@ -24,6 +25,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:$gradle_tools"
         //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "io.realm:realm-gradle-plugin:$v_realm"
     }
 }
 
